--- a/q/101469.html
+++ b/q/101469.html
@@ -26,7 +26,7 @@
     <th class="ttime">Time</th>
     <th class="tlink">Link</th>
   </tr>
-<tr d-ix="0"><td>068</td><td>Zsh</td><td>240613T050447Z</td><td><a href="https://codegolf.stackexchange.com/questions/101469/grid-ascii-art-code-golf/273635#273635">roblogic</a></td></tr>
+<tr d-ix="0"><td>055</td><td>Zsh</td><td>240613T050447Z</td><td><a href="https://codegolf.stackexchange.com/questions/101469/grid-ascii-art-code-golf/273635#273635">roblogic</a></td></tr>
 <tr d-ix="1"><td>097</td><td>GFortran fboundscheck</td><td>240613T042712Z</td><td><a href="https://codegolf.stackexchange.com/questions/101469/grid-ascii-art-code-golf/273634#273634">roblogic</a></td></tr>
 <tr d-ix="2"><td>013</td><td>Uiua</td><td>240612T231719Z</td><td><a href="https://codegolf.stackexchange.com/questions/101469/grid-ascii-art-code-golf/273631#273631">noodle p</a></td></tr>
 <tr d-ix="3"><td>067</td><td>Excel VBA</td><td>161129T191749Z</td><td><a href="https://codegolf.stackexchange.com/questions/101469/grid-ascii-art-code-golf/101523#101523">Taylor R</a></td></tr>
@@ -53,12 +53,12 @@
 <tr d-ix="24"><td>097</td><td>PHP</td><td>161129T125542Z</td><td><a href="https://codegolf.stackexchange.com/questions/101469/grid-ascii-art-code-golf/101474#101474">Titus</a></td></tr>
 <tr d-ix="25"><td>022</td><td>05AB1E</td><td>161129T125503Z</td><td><a href="https://codegolf.stackexchange.com/questions/101469/grid-ascii-art-code-golf/101473#101473">Emigna</a></td></tr>
 </table>
-<div id="pu0" class="pu"><h1><a href="https://www.zsh.org/" rel="nofollow noreferrer">Zsh</a>, 68 bytes</h1>
-
-<pre class="lang-sh prettyprint-override"><code>(($1&lt;6&amp;&amp;$2&lt;6))&amp;&amp;jot -b00000 5|sed &quot;$1 s/./$3/$2&quot;|grep -z &quot;$3&quot;|tac||e
+<div id="pu0" class="pu"><h1><a href="https://www.zsh.org/" rel="nofollow noreferrer">Zsh</a>, <sub><s>68</s></sub> 55 bytes</h1>
+<pre class="lang-sh prettyprint-override"><code>(($1&lt;6&amp;&amp;$2&lt;6))&amp;&amp;jot -b00000 5|sed &quot;$2 s/./$3/$1&quot;|tac||e
 </code></pre>
-<p><a href="https://tio.run/##qyrO@J@koVn9X0NDxdDGTE1NxcjGTFNTTS0rv0RBN8kABBRMa4pTUxSUVAwVivX19FWM9VWMlGrSi1ILFHSrgMLGSjUlick1Nan/U5Mz8rlqubiSFAyBUA9ImyoYKcRoARlmUAGgaQqZ/wE" rel="nofollow noreferrer" title="Zsh – Try It Online">Try it online!</a></p>
-<p>Correction and improvement to the bash solution, with bounds checks.</p>
+<p><a href="https://tio.run/##qyrO@J@koVn9X0NDxdDGTE1NxcjGTFNTTS0rv0RBN8kABBRMa4pTUxSUVIwUivX19FWM9VUMlWpKEpNralL/pyZn5HPVcnElKRgCoR6QNlIwVYjRAjKMFUwUrIC0GVQCaJBC5n8A" rel="nofollow noreferrer">Try it online!</a>
+<s><sub><a href="https://tio.run/##qyrO@J@koVn9X0NDxdDGTE1NxcjGTFNTTS0rv0RBN8kABBRMa4pTUxSUVAwVivX19FWM9VWMlGrSi1ILFHSrgMLGSjUlick1Nan/U5Mz8rlqubiSFAyBUA9ImyoYKcRoARlmUAGgaQqZ/wE" rel="nofollow noreferrer" title="Zsh – Try It Online">68b</a></sub></s></p>
+<p>If <code>$1</code> or <code>$2</code> are more than 5, Zsh throws <code>command not found: e</code>. If they are 0 or less, <code>sed</code> throws an error.</p>
 </div>
 <div id="pu1" class="pu"><h1><a href="https://gcc.gnu.org/fortran/" rel="nofollow noreferrer">GFortran</a> <code>-fbounds-check</code>, 97 bytes</h1>
 <pre class="lang-fortran prettyprint-override"><code>character(1)K(5,5),a;K='0';read*,m,n;read*,a;K(m,n)=a
