--- a/q/275522.html
+++ b/q/275522.html
@@ -39,6 +39,7 @@
 <tr d-ix="10"><td>nan</td><td>Vyxal</td><td>240914T043133Z</td><td><a href="https://codegolf.stackexchange.com/questions/275522/convert-base-10-to-base-0-1/275523#275523">lyxal</a></td></tr>
 </table>
 <div id="pu0" class="pu"><h1><a href="https://nodejs.org" rel="nofollow noreferrer">JavaScript (Node.js)</a>, 51 bytes</h1>
+<p>String and number manipulation instead of base conversion.</p>
 
 <pre class="lang-javascript prettyprint-override"><code>n=&gt;[...(n*1).toFixed(n.length)].reverse().join``*10
 </code></pre>
