--- a/q/235964.html
+++ b/q/235964.html
@@ -26,7 +26,7 @@
     <th class="ttime">Time</th>
     <th class="tlink">Link</th>
   </tr>
-<tr d-ix="0"><td>175</td><td>sed 4.2.2 r</td><td>240711T061548Z</td><td><a href="https://codegolf.stackexchange.com/questions/235964/implement-the-hyperfactorial/274071#274071">guest430</a></td></tr>
+<tr d-ix="0"><td>170</td><td>sed 4.2.2 r</td><td>240711T061548Z</td><td><a href="https://codegolf.stackexchange.com/questions/235964/implement-the-hyperfactorial/274071#274071">guest430</a></td></tr>
 <tr d-ix="1"><td>069</td><td>Swift 6</td><td>240907T215801Z</td><td><a href="https://codegolf.stackexchange.com/questions/235964/implement-the-hyperfactorial/275405#275405">macOSist</a></td></tr>
 <tr d-ix="2"><td>018</td><td>ARBLE</td><td>240903T225838Z</td><td><a href="https://codegolf.stackexchange.com/questions/235964/implement-the-hyperfactorial/275338#275338">ATaco</a></td></tr>
 <tr d-ix="3"><td>045</td><td>Clojure</td><td>240903T135137Z</td><td><a href="https://codegolf.stackexchange.com/questions/235964/implement-the-hyperfactorial/275319#275319">NikoNyrh</a></td></tr>
@@ -113,18 +113,26 @@
 <tr d-ix="84"><td>005</td><td>Husk</td><td>211004T081650Z</td><td><a href="https://codegolf.stackexchange.com/questions/235964/implement-the-hyperfactorial/235966#235966">Dominic </a></td></tr>
 <tr d-ix="85"><td>008</td><td>Charcoal</td><td>211004T081405Z</td><td><a href="https://codegolf.stackexchange.com/questions/235964/implement-the-hyperfactorial/235965#235965">Neil</a></td></tr>
 </table>
-<div id="pu0" class="pu"><h2><a href="https://www.gnu.org/software/sed/" rel="nofollow noreferrer">sed 4.2.2</a> <code>-r</code>, <sup><sub><sub><sup> <s>291</s> <s>287</s> <s>276</s> <s>260</s> <s>255</s> <s>251</s> <s>248</s> <s>240</s> <s>233</s> <s>228</s> <s>226</s> <s>220</s> <s>219</s> <s>212</s> <s>209</s> <s>208</s> <s>207</s> <s>196</s> <s>193</s> <s>191</s> <s>184</s> <s>181</s> <s>177</s></sup></sub></sub></sup> 175 bytes</h2>
+<div id="pu0" class="pu"><h2><a href="https://www.gnu.org/software/sed/" rel="nofollow noreferrer">sed 4.2.2</a> <code>-r</code>, <sup><sub><sub><sup> <s>291</s> <s>287</s> <s>276</s> <s>260</s> <s>255</s> <s>251</s> <s>248</s> <s>240</s> <s>233</s> <s>228</s> <s>226</s> <s>220</s> <s>219</s> <s>212</s> <s>209</s> <s>208</s> <s>207</s> <s>196</s> <s>193</s> <s>191</s> <s>184</s> <s>181</s> <s>177</s> <s>175</s></sup></sub></sub></sup> 170 bytes</h2>
 <pre><code>h;G;G
 :;s/.//;x;s/\s.*//
 :a;s/#*/&amp; &amp;/;T;x;s/^##/#/;x;ta
-x;s/#\n#//;H;g;s/ //g;T;s/\n##+\n/&amp;/;t
-s/^(#+)\n#\n(#*)#/\2\n\2\n\2&#9;\1/;h;t
+x;s/#.#//;H;g;s/ //g;T;s/\n##+\n/&amp;/;t
+s/^(#+)\n#.(#*)#/\2\n\2\n\2&#9;\1/;h;t
+s/#\n\n|\n#//;h;T;s/.*&#9;#//;x;s/&#9;#*$//;ta
+</code></pre>
+<p><a href="https://tio.run/##ZZDBTsMwDIbPzVNMMqraVMufdBvQptp1PAC3lUmpmNru0CHaAwh4dYozBqq2QxT/zu8vtvv985jvbY@tmWdPCAm1eIdJF8vV7d19Bv0XQvQgjYxgB@/XQD02dmM3ImepAPvGd9krCYjccUwS4SyEfTy97IhA3jQ44TUp4poHW3M8YxjbuLwjSsoOXDXwh7uIkphzKiIZE8q07H5PUBrY5uQh1t0nm@AzHqJkQOd2ApI3HA5uZOOH0Vp/wfGIPdxZVazyhq0ViuJ/7kqbtZ84UnGhZGmiSqpYyTW3wLSGX7aa95UgZIgntExwU4K7JLgpob0mHPxOpgS6JNCUcBiNSMVCLMXq@/gytMeuH@evPw" rel="nofollow noreferrer" title="sed 4.2.2 - Try It Online">Try it online! (cases 1-5; breaks with 0)</a></p>
+<h2><a href="https://www.gnu.org/software/sed/" rel="nofollow noreferrer">sed 4.2.2</a> <code>-r</code>, 173 bytes, handles 0, very slow</h2>
+<pre><code>h;G;G
+:;s/.//;x;s/\s.*//
+:a;s/#*/&amp; &amp;/;T;x;s/^##/#/;x;ta
+x;s/#.#//;H;g;s/ //g;T;s/\n##+\n/&amp;/;t
+s/^(#+)\n#.(#*)#/\2\n\2\n\2&#9;\1/;h;t
 s/#*\n\n|#\n#/#/;h;T;s/.*&#9;#//;x;s/&#9;#*$//;ta
 </code></pre>
-<p><a href="https://tio.run/##ZZBNTsMwEIXX8SkqDYoSV/Wz0/KTuOq2HIBdTSVHVEm7cBHJAgRcnTAuBUVlYXne@M3nmel2T0O1sx02ZlY@IiU04g2mmC@ub27vSujfEKIDaZQE20e/BpqhtWu7FhVLBdhXvl2nJCAqzzFJpJMU9uH0siUCRVPvRdTkAnHRvW1YTJjGPq4PRFMXwGU9/7jNaJpzzoWMZE5whQs/J3EGtj2ZSHIifJyAFJMRpGRC554Sklcc9n5g77vRWn/C85wd/FnVrKqWrTWWy7/ha21WcexM5UslnclqqXIlV9wF01p@2Whe2hQpQyJhzwQ/JvhLgh8T9v8Jh7iYMYEuCTQmHAYtjCjEXCy@js/9/hi6YfbyDQ" rel="nofollow noreferrer" title="sed 4.2.2 – Try It Online">Try it online! (cases 0-4; slow but works on 0)</a><br />
-<a href="https://tio.run/##ZZDBTsMwDIbPy1NMMqraVMufdBvQZtp1PAC3hUmpmNbtkCHaAwh4dYozBqq2QxT/9u8vdtrtc19tbYu1mZRPSAg78Q5TTGfz27v7EvovhGhBGiXBdtGvgV3f2JVdiYqlAuwb365VEhCV55gkknEC@3iqbIhA0dR5ETW5QNz0YHcsxkxjH/cHotwFcFvHL25SyjPOuZCSzAiucOH3jJyBbU4m4rILnycgxWQEKTmi80wjkjccdr5n74fRWn/B854t/FnVrKqGrTUWi//la22Wce1UZQslnUlrqTIllzwF0xqurDV/Wo6EIZGwZ4IfEvwlwQ8J@2vCIX7MkECXBBoSDr0RhZiKmZh/H1@6/TG0/eT1Bw" rel="nofollow noreferrer" title="sed 4.2.2 - Try It Online">Try it online! (cases 1-5; fast but breaks with 0)</a><br />
-<a href="https://tio.run/##XZDPasMwDMbP01MUBCFxqD87/Zs4dMfuAXqrVzCspOkhLUsOG2Ovvkzu2Cg7GOuT9P1kuT@@jNXR9djbafmMhNHQO2wxmy@Wq3UJ8xuCerBByXBD7DdAM57c1m2pEqkB9ya377UCqAoSs0IySeB2t8qBGRybhkBRs@9YTE@uETF5FJzbyQzJcu47iG8QeUg5zyTnu5RVxvCF737Og7dwp1uTVmJgjAL9sMaYTwRZo2oFHFDXf9sEYzdxj1RntXhsGpTOtNoIVaa1Utkb@YUciUAi4RzfeU/g/wS@J5xHQ5YKmtGcFrSk1dflOrSXrh@nr98" rel="nofollow noreferrer" title="sed 4.2.2 – Try It Online">Try it online! (cases 0-7; calculate the powers but don't multiply them together)</a></p>
-<p>takes input and output as unary <code>#</code>s. TIO links include conversion to/from decimal in header/footer. the difference between the fast and slow cases is only one character: changing the first <code>*</code> on the last line to a <code>#</code> breaks the code for 0 (and only 0), but also has a massive speed improvement. with the astrisk, case 5 takes more than 100 hours (still hasn't finished), but with the octothorpe it finishes in 10 seconds.</p>
+<p><a href="https://tio.run/##ZZBNboMwEIXX@BSRpkJgFD@bpD9glG16gO5CIxk1ArIgVWHRqu3VS8c0rVC6sDxv/ObzzPSHpzE/2B47s8weERJq8QaTrtbXN7d3GfRvCNGDNDKCHbxfA/XY2K3dipylAuwr32WvJCByxzFJhIsQ9mF62ROBvGlwwmtSxDX3tuZ4wTC2cXlHlJQduGrgD/cRJTHnVEQyJpRp2f2coDSwzeQhyYnug9jm@c3EUTKgc0cBySsOBzey991orT/heMoe7qwqVnnD1gpF8Td6pc3GDx2puFCyNFElVazkhrtgWsMvO80rSxAyxBNaJrg5wV0S3JzQ/icc/VrmBLok0JxwHLUwIhUrsf46PQ/tqevH5cs3" rel="nofollow noreferrer" title="sed 4.2.2 – Try It Online">Try it online! (cases 0-4)</a><br />
+<a href="https://tio.run/##XZDPasMwDMbP01MUBCFxqD87/bfEodfuAXZrVjCspOkhHXMOG2OvPk/u2Cg7GEvW9/0kORyfY3N0AXs7r5@QMXp6h60Wy9V6c1/D/IagADaoGW5KegP08eR2bkeNpBpwb3J3QSuAGi8xK2SzDO7xWjkwg5No8pRy1iyeB9dLPBOYyMQ@MpfdCHFN0vCQc1nIm85ZFYyu6safc9dZuNNVo5XoGVGIH9YY8wkvOzSD0Dza9m8Vb@w2LZHrohWPzb3ShVZboUqzQSp7I19QIhNIIpzTkLcE/k/gW8I5GrJU0YKWtKI1bb4uL9NwGUOcv34D" rel="nofollow noreferrer" title="sed 4.2.2 – Try It Online">Try it online! (cases 0-7; calculate the powers but don't multiply them together)</a></p>
+<p>takes input and output as unary <code>#</code>s. TIO links include conversion to/from decimal in header/footer. the difference between the two versions is the last line.</p>
 <p>after two months and 100 bytes of golfing, I think it's high time to actually write out an explanation. normally, I add the explanation in comments next to the code, but I think explaining the data format first will work better with this one. the PATTERN and HOLD spaces are switched around a lot, but let's call this the initial PATTERN space:</p>
 <pre><code>add
 mult
