--- a/index.html
+++ b/index.html
@@ -16,15 +16,16 @@
 <pre>
 " ====================================================================
 "                                                                      
-"   /golfscore                                      20240916T131616Z
+"   /golfscore                                      20240916T132603Z
 "                                                                      
 " ====================================================================
 </pre></td></tr>
 <tr> <td>
 <pre>
+<a href="q/17305.html">Transpose a page of text                        : 0017305</a>
+<a href="q/156303.html">Want to see a Magic Card Trick?                 : 0156303</a>
 <a href="q/235964.html">Implement the hyperfactorial                    : 0235964</a>
 <a href="q/275522.html">Convert base-10 to base-0.1                     : 0275522</a>
-<a href="q/17305.html">Transpose a page of text                        : 0017305</a>
 <a href="q/275493.html">Function with memories of its past life         : 0275493</a>
 <a href="q/101469.html">Grid ASCII art code golf                        : 0101469</a>
 <a href="q/193021.html">I reverse the source code you negate the input! : 0193021</a>
