--- a/q/156303.html
+++ b/q/156303.html
@@ -26,20 +26,75 @@
     <th class="ttime">Time</th>
     <th class="tlink">Link</th>
   </tr>
-<tr d-ix="0"><td>047</td><td>Uiua</td><td>240916T132533Z</td><td><a href="https://codegolf.stackexchange.com/questions/156303/want-to-see-a-magic-card-trick/275558#275558">nyxbird</a></td></tr>
-<tr d-ix="1"><td>135</td><td>Python 2</td><td>180226T155121Z</td><td><a href="https://codegolf.stackexchange.com/questions/156303/want-to-see-a-magic-card-trick/156773#156773">TFeld</a></td></tr>
-<tr d-ix="2"><td>171</td><td>R</td><td>180220T223120Z</td><td><a href="https://codegolf.stackexchange.com/questions/156303/want-to-see-a-magic-card-trick/156307#156307">Giuseppe</a></td></tr>
-<tr d-ix="3"><td>026</td><td>Jelly</td><td>180221T001036Z</td><td><a href="https://codegolf.stackexchange.com/questions/156303/want-to-see-a-magic-card-trick/156319#156319">Jonathan</a></td></tr>
-<tr d-ix="4"><td>045</td><td>Pyth</td><td>180221T163413Z</td><td><a href="https://codegolf.stackexchange.com/questions/156303/want-to-see-a-magic-card-trick/156367#156367">user4854</a></td></tr>
-<tr d-ix="5"><td>193</td><td>><></td><td>180221T053245Z</td><td><a href="https://codegolf.stackexchange.com/questions/156303/want-to-see-a-magic-card-trick/156328#156328">Jo King</a></td></tr>
-<tr d-ix="6"><td>259</td><td>Java 8</td><td>180221T103723Z</td><td><a href="https://codegolf.stackexchange.com/questions/156303/want-to-see-a-magic-card-trick/156345#156345">Kevin Cr</a></td></tr>
-<tr d-ix="7"><td>059</td><td>Retina</td><td>180221T100358Z</td><td><a href="https://codegolf.stackexchange.com/questions/156303/want-to-see-a-magic-card-trick/156343#156343">Neil</a></td></tr>
-<tr d-ix="8"><td>175</td><td>PowerShell v2 or later</td><td>180221T101639Z</td><td><a href="https://codegolf.stackexchange.com/questions/156303/want-to-see-a-magic-card-trick/156344#156344">user3141</a></td></tr>
-<tr d-ix="9"><td>029</td><td>05AB1E</td><td>180221T091841Z</td><td><a href="https://codegolf.stackexchange.com/questions/156303/want-to-see-a-magic-card-trick/156339#156339">Emigna</a></td></tr>
-<tr d-ix="10"><td>175</td><td>Python 2</td><td>180220T221824Z</td><td><a href="https://codegolf.stackexchange.com/questions/156303/want-to-see-a-magic-card-trick/156305#156305">ovs</a></td></tr>
-<tr d-ix="11"><td>nan</td><td>Ruby</td><td>180220T235227Z</td><td><a href="https://codegolf.stackexchange.com/questions/156303/want-to-see-a-magic-card-trick/156316#156316">Level Ri</a></td></tr>
+<tr d-ix="0"><td>382</td><td>Scala 3</td><td>240916T135728Z</td><td><a href="https://codegolf.stackexchange.com/questions/156303/want-to-see-a-magic-card-trick/275559#275559">138 Aspe</a></td></tr>
+<tr d-ix="1"><td>047</td><td>Uiua</td><td>240916T132533Z</td><td><a href="https://codegolf.stackexchange.com/questions/156303/want-to-see-a-magic-card-trick/275558#275558">nyxbird</a></td></tr>
+<tr d-ix="2"><td>135</td><td>Python 2</td><td>180226T155121Z</td><td><a href="https://codegolf.stackexchange.com/questions/156303/want-to-see-a-magic-card-trick/156773#156773">TFeld</a></td></tr>
+<tr d-ix="3"><td>171</td><td>R</td><td>180220T223120Z</td><td><a href="https://codegolf.stackexchange.com/questions/156303/want-to-see-a-magic-card-trick/156307#156307">Giuseppe</a></td></tr>
+<tr d-ix="4"><td>026</td><td>Jelly</td><td>180221T001036Z</td><td><a href="https://codegolf.stackexchange.com/questions/156303/want-to-see-a-magic-card-trick/156319#156319">Jonathan</a></td></tr>
+<tr d-ix="5"><td>045</td><td>Pyth</td><td>180221T163413Z</td><td><a href="https://codegolf.stackexchange.com/questions/156303/want-to-see-a-magic-card-trick/156367#156367">user4854</a></td></tr>
+<tr d-ix="6"><td>193</td><td>><></td><td>180221T053245Z</td><td><a href="https://codegolf.stackexchange.com/questions/156303/want-to-see-a-magic-card-trick/156328#156328">Jo King</a></td></tr>
+<tr d-ix="7"><td>259</td><td>Java 8</td><td>180221T103723Z</td><td><a href="https://codegolf.stackexchange.com/questions/156303/want-to-see-a-magic-card-trick/156345#156345">Kevin Cr</a></td></tr>
+<tr d-ix="8"><td>059</td><td>Retina</td><td>180221T100358Z</td><td><a href="https://codegolf.stackexchange.com/questions/156303/want-to-see-a-magic-card-trick/156343#156343">Neil</a></td></tr>
+<tr d-ix="9"><td>175</td><td>PowerShell v2 or later</td><td>180221T101639Z</td><td><a href="https://codegolf.stackexchange.com/questions/156303/want-to-see-a-magic-card-trick/156344#156344">user3141</a></td></tr>
+<tr d-ix="10"><td>029</td><td>05AB1E</td><td>180221T091841Z</td><td><a href="https://codegolf.stackexchange.com/questions/156303/want-to-see-a-magic-card-trick/156339#156339">Emigna</a></td></tr>
+<tr d-ix="11"><td>175</td><td>Python 2</td><td>180220T221824Z</td><td><a href="https://codegolf.stackexchange.com/questions/156303/want-to-see-a-magic-card-trick/156305#156305">ovs</a></td></tr>
+<tr d-ix="12"><td>nan</td><td>Ruby</td><td>180220T235227Z</td><td><a href="https://codegolf.stackexchange.com/questions/156303/want-to-see-a-magic-card-trick/156316#156316">Level Ri</a></td></tr>
 </table>
-<div id="pu0" class="pu"><h1><a href="https://uiua.org" rel="nofollow noreferrer">Uiua</a>, 47 bytes</h1>
+<div id="pu0" class="pu"><h1><a href="https://www.scala-lang.org/" rel="nofollow noreferrer">Scala 3</a>, 382 bytes</h1>
+<p>Golfed version. It can be golfed much more.</p>
+<p><a href="https://ato.pxeger.com/run?1=XZHNTgIxFIXjtk9RJyzaCJMo_uCEkhA0MaILHWVDWNSZFiqdlrRlApmML-KGjT6UT2OHGVy46e09uTfnuzmf3zahknZ3u6-1453ez9GHyFbaOLjXw7UTMnymKtUZ0G_vLHHwkQpVgJRxmPkfomZuo6ExdDuNnRFqPsPRqxKOFCCnEsYkiO9GN8G-mZDgrHt-cXnVu365fxoPK9XANHoQ1k3RaEFNu3rwjFQKwkBwlIZKq9ts5ba4ACtv4KTyYqKl9DRFQi1DedtiwWHsVeU8lEUWk4ENWraVByUG5d6dRzUgGTR1Qwb1aaFdrDmXDG1CpytrHDq6ZOgUh9myHoZ_3v9WENfGn9rvTIDtd2JQbgWTKfTkHE3wCUcxPiYeJW_ZADcVMmkZbPjwwbPiLOsYmjQOqfwC" rel="nofollow noreferrer">Attempt This Online!</a></p>
+<pre><code>import scala.util.Random
+object Main{
+def main(args:Array[String]):Unit={
+val S=&quot;SHCD&quot;
+val V=&quot;23456789TJQKA&quot;
+var d:List[(Char,Char)]=List()
+if(d.nonEmpty){
+println(d.collect{case(v,s)if S.contains(s)=&gt;s&quot;$s$v&quot;})
+}
+val f:String=&gt;String=x=&gt;Random.shuffle(x.toList).take(1).mkString 
+println(Random.shuffle((for{
+v&lt;-V
+s&lt;-S
+}yield if(f(V)+f(S)!=s&quot;$v$s&quot;)s&quot;$v$s&quot; else s&quot;$s$v&quot;).toList))
+}
+}
+</code></pre>
+<p>Ungoled version. <a href="https://ato.pxeger.com/run?1=dVRNb9NAEL1w8q8YrB5s4bqipVAiglQ5iJSPAwROUQ4be5wsWe9au5tKUZVfwiVCKj-KX8PubL7cwsWa_Zj33sy89c_fpmSCXWw290tbn179eXLPm1ZpC7SfLy0X-VcmK9VEkZr-wNLCZ8Yl3EUAFdbQuEXC9Mz04FprthqPrOZyNkl78F1yC326CXB2BqMltwYcFpRMV3DLxBINHboQDJ32IR4Ni0EcEtxy1LIKMxi6cIhM2wwKFxZiOc1g4KIBZ42S1R4moHqc84sXly9fXb3-9uHLx-s42ql417R2BYIbC7XSQUrLuN4p0a6sctGDT-7GOCnmTDtK900nDtRvJuke66YGO0dKAG5AKgvo4TNoXRMsHWq8RW2wOmKCxN9kbSt4yaYCgZkODmHAHDWmxMRrSPxZLpUk-em2qRB4hAzHpRLCD-jOcRmEhHqRUWdTD0ItdrekdUMzSdjvvwUTn_j4hO7HsA6s632ZI9a0TqWSeDQ5GqTf8qmHKaJXgFXh7_UhOCc382VdCwyCTG6V72OaW7bA5HmaN4tgGiILKWIFLXfd6HI-ovGWekwT6vw_y79pOnVoh9qp5VmX00MUqplyl2iVd1IDLChNMJ_lmfPfKD445T1K1My6rgkBJSUyy5U0oOrj50BdJf1ZeCmqaZlGQFbOPZG3yU4I5e0V-4XZSvKt9-beuSQM7M3p8ZsDovGbRBdGDiuOoiLDaXja986gFPJHnD5YAwpns657DqYJw6AqDq-BLO5KvjwPgqNjEz8YY6ei3Ti9N9fROvyttj-tza_xJER_AQ" rel="nofollow noreferrer">Attempt This Online!</a></p>
+<pre class="lang-scala prettyprint-override"><code>import scala.util.Random
+
+object Main {
+  def main(args: Array[String]): Unit = {
+    // Suits and card values
+    val suits = &quot;SHCD&quot;  // S = Spade, H = Heart, C = Club, D = Diamond
+    val values = &quot;23456789TJQKA&quot;
+
+    // Empty list for card pairs
+    var deck: List[(Char, Char)] = List()
+
+    // If the deck is not empty, print the reversed card pairs (not applicable as the deck is empty here)
+    if (deck.nonEmpty) {
+      println(deck.collect { case (value, suit) if suits.contains(suit) =&gt; s&quot;$suit$value&quot; })
+    }
+
+    // Sample one card value and one suit
+    val selectedCard = Random.shuffle(values.toList).take(1).mkString  // Randomly pick one card value
+    val selectedSuit = Random.shuffle(suits.toList).take(1).mkString   // Randomly pick one suit
+    val r = selectedCard + selectedSuit  // Combine to form a card (e.g., &quot;2S&quot;)
+
+    // Generate all combinations of card values and suits, and compare each to the selected card
+    val cardsCombined = for {
+      value &lt;- values
+      suit &lt;- suits
+    } yield if (r != s&quot;$value$suit&quot;) s&quot;$value$suit&quot; else s&quot;$suit$value&quot;
+
+    // Shuffle and print the deck of 52 cards
+    println(Random.shuffle(cardsCombined.toList))
+  }
+}
+</code></pre>
+</div>
+<div id="pu1" class="pu"><h1><a href="https://uiua.org" rel="nofollow noreferrer">Uiua</a>, 47 bytes</h1>
 <pre><code>⨬(°⍆⍜⊢⇌°⍆☇1⊞⊂⊂+@2⇡8&quot;TJQKA&quot;|⇌⊢▽⊢⍉⊸∈)±⧻,&quot;SDCH&quot;
 </code></pre>
 <p><a href="https://www.uiua.org/pad?src=0_13_0-dev_2__IyBFeHBlcmltZW50YWwhCvCfqoQg4oaQIOKorCjCsOKNhuKNnOKKouKHjMKw4o2G4piHMeKKnuKKguKKgitAMuKHoTgiVEpRS0EifOKHjOKKouKWveKKouKNieKKuOKIiCnCseKnuywiU0RDSCIK8J-qhFtdCvCfqoQuCg==" rel="nofollow noreferrer">Try it!</a></p>
@@ -58,7 +113,7 @@
 </code></pre>
 <p>Funnily enough, if we could use <code>♣♦♥♠</code> instead of letters, we could save a byte with <code>Suits</code></p>
 </div>
-<div id="pu1" class="pu"><h1><a href="https://docs.python.org/2/" rel="nofollow noreferrer">Python 2</a>, 135 bytes</h1>
+<div id="pu2" class="pu"><h1><a href="https://docs.python.org/2/" rel="nofollow noreferrer">Python 2</a>, 135 bytes</h1>
 
 
 
@@ -79,7 +134,7 @@ print d
 
 <p>Empty input is <code>[]</code></p>
 </div>
-<div id="pu2" class="pu"><h1><a href="https://www.r-project.org/" rel="nofollow noreferrer">R</a>, <s>177</s> 171 bytes</h1>
+<div id="pu3" class="pu"><h1><a href="https://www.r-project.org/" rel="nofollow noreferrer">R</a>, <s>177</s> 171 bytes</h1>
 
 
 
@@ -94,7 +149,7 @@ S(m)}
 
 <p>Reversing it, we look for a card starting with one of <code>SDHC</code> and reverse it.</p>
 </div>
-<div id="pu3" class="pu"><h1><a href="https://github.com/DennisMitchell/jelly" rel="nofollow noreferrer">Jelly</a>, 26 <a href="https://github.com/DennisMitchell/jelly/wiki/Code-page" rel="nofollow noreferrer">bytes</a></h1>
+<div id="pu4" class="pu"><h1><a href="https://github.com/DennisMitchell/jelly" rel="nofollow noreferrer">Jelly</a>, 26 <a href="https://github.com/DennisMitchell/jelly/wiki/Code-page" rel="nofollow noreferrer">bytes</a></h1>
 
 <pre><code>9ḊṾ€;“AJKQT”p“CDHS”ḟ⁸ẊU-¦Ẋ
 </code></pre>
@@ -123,7 +178,7 @@ S(m)}
                          Ẋ - shuffle
 </code></pre>
 </div>
-<div id="pu4" class="pu"><h1>Pyth, 45 bytes</h1>
+<div id="pu5" class="pu"><h1>Pyth, 45 bytes</h1>
 
 <pre><code>J"CDHS"KO52=NsM.S*+c"AKQJT"1S9J|f}hTJQXNK_@NK
 </code></pre>
@@ -141,7 +196,7 @@ J"CDHS"                                        Save the suits as J.
                                |      XNK_@NK  If there aren't any, flip a card.
 </code></pre>
 </div>
-<div id="pu5" class="pu"><h1><a href="https://esolangs.org/wiki/Fish" rel="nofollow noreferrer">>&lt;></a>, <s>215</s> 193 bytes</h1>
+<div id="pu6" class="pu"><h1><a href="https://esolangs.org/wiki/Fish" rel="nofollow noreferrer">>&lt;></a>, <s>215</s> 193 bytes</h1>
 
 <pre><code>i:0)?\~"CHSD":"2"$:"3"$:"4"$:"5"$:"6"$:"7"$:"8"$:"9"$:"T"$:"J"$:"Q"$:"K"$:"A"$&amp;105&amp;"S"=?.~~~{c0.
 =+i$?\i$:::"B")$"I"(*$"S"
@@ -178,7 +233,7 @@ x0
 
 <p><em>But not all</em> shuffled combinations are possible outputs (and in fact, the vast majority aren't).</p>
 </div>
-<div id="pu6" class="pu"><h1>Java 8, <s>275</s> <s>274</s> 259 bytes</h1>
+<div id="pu7" class="pu"><h1>Java 8, <s>275</s> <s>274</s> 259 bytes</h1>
 
 <pre class="lang-java prettyprint-override"><code>import java.util.*;s-&gt;{if(s==null){List l=new Stack();char i=52,r=i,x,y;for(r*=Math.random();i--&gt;0;y=&quot;23456789TJQKA&quot;.charAt(i%13),l.add(i==r?x+&quot;&quot;+y:y+&quot;&quot;+x))x=&quot;HSDC&quot;.charAt(i&amp;3);Collections.shuffle(l);return l;}return s.replaceAll(&quot;.*,(.)([^HSDC]).*&quot;,&quot;$2$1&quot;);}
 </code></pre>
@@ -210,7 +265,7 @@ s-&gt;{                         // Method with String parameter and Object retur
             &quot;$2$1&quot;);}        //   and output it non-reversed
 </code></pre>
 </div>
-<div id="pu7" class="pu"><h1><a href="https://github.com/m-ender/retina/wiki/The-Language" rel="noreferrer">Retina</a>, <s>61</s> <s>60</s> 59 bytes</h1>
+<div id="pu8" class="pu"><h1><a href="https://github.com/m-ender/retina/wiki/The-Language" rel="noreferrer">Retina</a>, <s>61</s> <s>60</s> 59 bytes</h1>
 
 <pre><code>G`[HCDS].
 ^$
@@ -246,7 +301,7 @@ $&amp;H¶$&amp;D¶$&amp;C¶$&amp;S
 
 <p>Shuffle the card(s).</p>
 </div>
-<div id="pu8" class="pu"><h1>PowerShell v2 or later, 175 bytes</h1>
+<div id="pu9" class="pu"><h1>PowerShell v2 or later, 175 bytes</h1>
 
 <pre><code>%{$s=[char[]]'SDHC';if($_){$_|?{$s-contains$_[0]}|%{$_[1]+$_[0]}}else{$d=$s|%{$e=$_;[char[]]'23456789TJQKA'|%{$_+$e}}|random -c 52;$r=random 52;$d[$r]=$d[$r][1]+$d[$r][0];$d}}
 </code></pre>
@@ -288,14 +343,14 @@ $&amp;H¶$&amp;D¶$&amp;C¶$&amp;S
 <pre><code>$Deck | %{$s=[char[]]'SDHC';if($_){$_|?{$s-contains$_[0]}|%{$_[1]+$_[0]}}else{$d=$s|%{$e=$_;[char[]]'23456789TJQKA'|%{$_+$e}}|random -c 52;$r=random 52;$d[$r]=$d[$r][1]+$d[$r][0];$d}}
 </code></pre>
 </div>
-<div id="pu9" class="pu"><h1><a href="https://github.com/Adriandmen/05AB1E" rel="nofollow noreferrer">05AB1E</a>, 29 bytes</h1>
+<div id="pu10" class="pu"><h1><a href="https://github.com/Adriandmen/05AB1E" rel="nofollow noreferrer">05AB1E</a>, 29 bytes</h1>
 
 <pre><code>Y9ŸJ.•§®т•«.•öB•âsKDgiëDΩÂ:.r
 </code></pre>
 
 <p><a href="https://tio.run/##JY8xDoJAEEWvYreNIYqwsJaGSk9gjAWiUaFCOIDhKDTGkFgaa4itiVfwImv2TfPyefyZgUmY7qYHa9fm/Vp6v2vb3/rHt3Ghc4/Dc@HYVqvkeB665HMfmrl3sXaj6kqNR2qWwZOj3jsWmBqT08nxGp/KFCzwEc1aMt6HGl/CmNmAji978D40MJSd5IhOlmLwKbMl2cAQk9PUmECuyEXehuRAvlk2yJR08LFcZ7aEvvwLNBhDrjO1/QM" rel="nofollow noreferrer" title="05AB1E – Try It Online">Try it online!</a></p>
 </div>
-<div id="pu10" class="pu"><h1><a href="https://docs.python.org/2/" rel="nofollow noreferrer">Python 2</a>, 175 bytes</h1>
+<div id="pu11" class="pu"><h1><a href="https://docs.python.org/2/" rel="nofollow noreferrer">Python 2</a>, 175 bytes</h1>
 
 
 
@@ -310,7 +365,7 @@ print k([(a+b,b+a)[r==a+b]for a in c for b in s],52)
 
 <p><a href="https://tio.run/##Jcy9DsIgAATgnadgAyyL1frXMBgdjE5GN9IBio2kFhBw8OmR1ukuudznvvFpTZlS5@0AvTAqhx6c9XEGAkO30@GI6pahcrGsVuvN9n6@XvYIKKaN@0RMgO6g2jmvTeSyELCzHgoqoTZQwbyJsYWmfoOeBTG41wN41uOWzknR45ADTGfYY45FIWlGCPeM5d5M2Ai0kyv/Fq1KkhJvfg" rel="nofollow noreferrer" title="Python 2 – Try It Online">Try it online!</a> empty input is denoted as <code>[]</code></p>
 </div>
-<div id="pu11" class="pu"><h1><a href="https://www.ruby-lang.org/" rel="nofollow noreferrer">Ruby</a>, 95 (or 100) bytes</h1>
+<div id="pu12" class="pu"><h1><a href="https://www.ruby-lang.org/" rel="nofollow noreferrer">Ruby</a>, 95 (or 100) bytes</h1>
 
 
 
