--- a/q/267189.html
+++ b/q/267189.html
@@ -49,7 +49,7 @@ Content-Length:373
 
 {1}{1}{}&quot;,&quot;\x22#);}&quot;,r#&quot;&quot;#);}
 </code></pre>
-<p>When run as the main.rs file in a cargo project with <code>cargo run</code>, this program waits until you go to 127.0.0.1:8080 in your browser (this is what <code>accept()</code> does) and then sends over its source code and ends.</p>
+<p>When run as the main.rs file in a cargo project with <code>cargo run</code>, this program waits until you go to [::1]:8080 (ipv6 loopback) in your browser (this is what <code>accept()</code> does) and then sends over its source code and ends.</p>
 </div>
 <div id="pu1" class="pu"><h1>C (<code>gcc -lws2_32</code> + <code>winsock2.h</code>), 408 bytes</h1>
 <pre class="lang-c prettyprint-override"><code>Z;main(){char*S,Q[16]={2,0,4,1},*M=malloc(999);WSAStartup(9,M);sprintf(M,S=&quot;HTTP/1.1 200 OK%c%cContent-Length: 408%c%c%c%cZ;main(){char*S,Q[16]={2,0,4,1},*M=malloc(999);WSAStartup(9,M);sprintf(M,S=%c%s%c,13,10,13,10,13,10,34,S,34);bind(Z=socket(2,1,0),Q,16);for(listen(Z,3);;)send(accept(Z,Q,0),M,448,0);}&quot;,13,10,13,10,13,10,34,S,34);bind(Z=socket(2,1,0),Q,16);for(listen(Z,3);;)send(accept(Z,Q,0),M,448,0);}
