--- a/q/275546.html
+++ b/q/275546.html
@@ -30,11 +30,11 @@
 </table>
 <div id="pu0" class="pu"><h1>regex, 40 bytes</h1>
 <p><code>^(\d*)[:|,.](\d*)[:|,.](\d*)[:|,.](\d*)$</code><br />
-<a href="https://regex101.com/r/6i6flq/1" rel="nofollow noreferrer">try it online!</a></p>
+<a href="https://regex101.com/r/6i6flq/1" rel="noreferrer">try it online!</a></p>
 <p>or if you'll allow all the delimers to be exactly the same, this is even better:</p>
 <h1>regex, 34 bytes</h1>
 <p><code>^(\d*)([:|,.])(\d*)\2(\d*)\2(\d*)$</code><br />
-<a href="https://regex101.com/r/xZ9KwE/1" rel="nofollow noreferrer">try it online!</a></p>
+<a href="https://regex101.com/r/xZ9KwE/1" rel="noreferrer">try it online!</a></p>
 <p>lessons that can be learned:<br />
 in general, regex tends to be simpler than you think it is. often, if you're thinking of including a non-capturing group, it's easier to just get rid of the group altogether; non-capturing groups don't increase the 'power' of a regex at all (ie, there is no pattern a non-capturing group lets you capture that you couldn't have already matched without it).<br />
 also, you should only use <code>|</code> alternation for exact strings; <code>[]</code> character classes are much easier to use for individual characters. additionally, alternation can be very slow in terms of big-O if you have <code>*</code> or <code>+</code> counts on the individual elements.<br />
