--- a/q/275522.html
+++ b/q/275522.html
@@ -26,8 +26,8 @@
     <th class="ttime">Time</th>
     <th class="tlink">Link</th>
   </tr>
-<tr d-ix="0"><td>050</td><td>JavaScript Node.js</td><td>240916T115349Z</td><td><a href="https://codegolf.stackexchange.com/questions/275522/convert-base-10-to-base-0-1/275554#275554">Fhuvi</a></td></tr>
-<tr d-ix="1"><td>089</td><td>R</td><td>240916T123246Z</td><td><a href="https://codegolf.stackexchange.com/questions/275522/convert-base-10-to-base-0-1/275556#275556">pajonk</a></td></tr>
+<tr d-ix="0"><td>084</td><td>R</td><td>240916T123246Z</td><td><a href="https://codegolf.stackexchange.com/questions/275522/convert-base-10-to-base-0-1/275556#275556">pajonk</a></td></tr>
+<tr d-ix="1"><td>050</td><td>JavaScript Node.js</td><td>240916T115349Z</td><td><a href="https://codegolf.stackexchange.com/questions/275522/convert-base-10-to-base-0-1/275554#275554">Fhuvi</a></td></tr>
 <tr d-ix="2"><td>059</td><td>Python</td><td>240916T010600Z</td><td><a href="https://codegolf.stackexchange.com/questions/275522/convert-base-10-to-base-0-1/275548#275548">STerliak</a></td></tr>
 <tr d-ix="3"><td>012</td><td>05AB1E</td><td>240916T085006Z</td><td><a href="https://codegolf.stackexchange.com/questions/275522/convert-base-10-to-base-0-1/275550#275550">Kevin Cr</a></td></tr>
 <tr d-ix="4"><td>088</td><td>Python 3.12</td><td>240915T010906Z</td><td><a href="https://codegolf.stackexchange.com/questions/275522/convert-base-10-to-base-0-1/275542#275542">David Ch</a></td></tr>
@@ -39,7 +39,13 @@
 <tr d-ix="10"><td>030</td><td>Retina 0.8.2</td><td>240914T055131Z</td><td><a href="https://codegolf.stackexchange.com/questions/275522/convert-base-10-to-base-0-1/275524#275524">Neil</a></td></tr>
 <tr d-ix="11"><td>nan</td><td>Vyxal</td><td>240914T043133Z</td><td><a href="https://codegolf.stackexchange.com/questions/275522/convert-base-10-to-base-0-1/275523#275523">lyxal</a></td></tr>
 </table>
-<div id="pu0" class="pu"><h1><a href="https://nodejs.org" rel="nofollow noreferrer">JavaScript (Node.js)</a>, 50 <sup><s>51</s></sup> bytes</h1>
+<div id="pu0" class="pu"><h1><a href="https://www.r-project.org" rel="nofollow noreferrer">R</a>, <s>89</s> 84 bytes</h1>
+<pre class="lang-r prettyprint-override"><code>\(x,z=na.omit(strtoi(y&lt;-el(strsplit(x,&quot;&quot;)))))z%*%.1^(match(&quot;.&quot;,y,l&lt;-sum(1|z)+1)-2:l)
+</code></pre>
+<p><a href="https://ato.pxeger.com/run?1=m72waMGiNNulpSVpuhY3Q2I0KnSqbPMS9fJzM0s0ikuKSvIzNSptdFNzQJzighygaIWOkpImCFSpaqnqGcZp5CaWJGdoKOkp6VTq5NjoFpfmahjWVGlqG2rqGlnlaELNdkzTUDI00jM2UdLkAjJNjI30DCFMA0MjCAMuYqxnAGdAWZZKUIMWLIDQAA" rel="nofollow noreferrer">Attempt This Online!</a></p>
+<p>Seems that base conversion is shorter than reversing and tinkering with the decimal point.</p>
+</div>
+<div id="pu1" class="pu"><h1><a href="https://nodejs.org" rel="nofollow noreferrer">JavaScript (Node.js)</a>, 50 <sup><s>51</s></sup> bytes</h1>
 <blockquote>
 <p>-1 byte thanks to l4m2's tip</p>
 </blockquote>
@@ -55,12 +61,6 @@
 <li>The absence of <code>.</code> in some cases, whether directly in the input or after some calculation, doesn't allow to simply reverse the string. This is fixed with the <code>toFixed</code></li>
 <li>if we choose to <code>divide by 10 before</code>, this would give some pretty bad floating point errors, especially for the test case <code>2.1</code>. So it's simpler to <code>multiply by 10 afterwards</code></li>
 </ul>
-</div>
-<div id="pu1" class="pu"><h1><a href="https://www.r-project.org" rel="nofollow noreferrer">R</a>, 89 bytes</h1>
-<pre class="lang-r prettyprint-override"><code>\(x,`/`=strsplit,n=el(x/&quot;\\.&quot;),l=c(nchar(n),0))strtoi(unlist(n/&quot;&quot;))%*%.1^((l[1]-1):-l[2])
-</code></pre>
-<p><a href="https://ato.pxeger.com/run?1=Pc1BCoMwEAXQfY8REGZKEpPoogg5SFGLRRoqhFhiBO_STVrooXqbBlJczePz-fN8-fg2-rMGw07fcwcbHcpBL8EvDzsF6vTNwlaSruMEqdUjuPF-9eCQCsRUC_MEq7PTEsCVhCAWx4LLC4BtZc8kNsy2qsf_g8YAkYpXNcFDYl0pLjOFVBl7UnGxIykvxJjvDw" rel="nofollow noreferrer">Attempt This Online!</a></p>
-<p>Seems that base conversion is shorter than reversing and tinkering with the decimal point.</p>
 </div>
 <div id="pu2" class="pu"><h1><a href="https://www.python.org" rel="nofollow noreferrer">Python</a>, <s>61</s> 59 bytes</h1>
 <pre class="lang-python prettyprint-override"><code>lambda x:re.sub('(.)(\.|$)',r'.\1',x,1)[::-1]+'0'
