--- a/q/275493.html
+++ b/q/275493.html
@@ -26,9 +26,9 @@
     <th class="ttime">Time</th>
     <th class="tlink">Link</th>
   </tr>
-<tr d-ix="0"><td>049</td><td>Rust</td><td>240916T114211Z</td><td><a href="https://codegolf.stackexchange.com/questions/275493/function-with-memories-of-its-past-life/275553#275553">bzr</a></td></tr>
-<tr d-ix="1"><td>069</td><td>C++</td><td>240916T101458Z</td><td><a href="https://codegolf.stackexchange.com/questions/275493/function-with-memories-of-its-past-life/275551#275551">cigien</a></td></tr>
-<tr d-ix="2"><td>045</td><td>Haskell</td><td>240913T184613Z</td><td><a href="https://codegolf.stackexchange.com/questions/275493/function-with-memories-of-its-past-life/275518#275518">Antonio </a></td></tr>
+<tr d-ix="0"><td>045</td><td>Haskell</td><td>240913T184613Z</td><td><a href="https://codegolf.stackexchange.com/questions/275493/function-with-memories-of-its-past-life/275518#275518">Antonio </a></td></tr>
+<tr d-ix="1"><td>045</td><td>Rust</td><td>240916T114211Z</td><td><a href="https://codegolf.stackexchange.com/questions/275493/function-with-memories-of-its-past-life/275553#275553">bzr</a></td></tr>
+<tr d-ix="2"><td>069</td><td>C++</td><td>240916T101458Z</td><td><a href="https://codegolf.stackexchange.com/questions/275493/function-with-memories-of-its-past-life/275551#275551">cigien</a></td></tr>
 <tr d-ix="3"><td>018</td><td>Wolfram Language Mathematica</td><td>240913T081135Z</td><td><a href="https://codegolf.stackexchange.com/questions/275493/function-with-memories-of-its-past-life/275502#275502">att</a></td></tr>
 <tr d-ix="4"><td>025</td><td>Clojure</td><td>240913T195506Z</td><td><a href="https://codegolf.stackexchange.com/questions/275493/function-with-memories-of-its-past-life/275519#275519">Mitchell</a></td></tr>
 <tr d-ix="5"><td>085</td><td>Java</td><td>240913T074322Z</td><td><a href="https://codegolf.stackexchange.com/questions/275493/function-with-memories-of-its-past-life/275500#275500">Kevin Cr</a></td></tr>
@@ -41,27 +41,35 @@
 <tr d-ix="12"><td>021</td><td>PARI/GP</td><td>240913T062831Z</td><td><a href="https://codegolf.stackexchange.com/questions/275493/function-with-memories-of-its-past-life/275496#275496">alephalp</a></td></tr>
 <tr d-ix="13"><td>021</td><td>JavaScript V8</td><td>240913T061528Z</td><td><a href="https://codegolf.stackexchange.com/questions/275493/function-with-memories-of-its-past-life/275495#275495">Arnauld</a></td></tr>
 </table>
-<div id="pu0" class="pu"><h1><a href="https://www.rust-lang.org" rel="nofollow noreferrer">Rust</a>, <s>57</s> 49 bytes</h1>
-<pre class="lang-rust prettyprint-override"><code>fn x&lt;F&gt;(s:&amp;str)-&gt;F where F:Fn(&amp;str){dbg!(s);x(s)}
+<div id="pu0" class="pu"><h1><a href="https://www.haskell.org/" rel="nofollow noreferrer">Haskell</a>, <s>57</s>, 45 bytes</h1>
+
+<p>Solution using a constructor:</p>
+<pre class="lang-hs prettyprint-override"><code>data U=U([Char]-&gt;IO U);f s=U$(&lt;$putStrLn s).f
 </code></pre>
-<p><a href="https://ato.pxeger.com/run?1=m72kqLS4ZMGCpaUlaboWNw3T8hQqbNzsNIqt1IpLijR17dwUyjNSi1IV3Kzc8jTAYtUpSemKGsWa1hVAohZJY25iZp6GpkI1lwIQVFhZ2TjlV9ikVOYpwHTa2WkolaQWlyhpWnNBNcJsBgA" rel="nofollow noreferrer">Attempt This Online!</a></p>
+<p><a href="https://tio.run/##y0gszk7Nyfn/PyWxJFEh1DZUI9o5I7EoVtfO018hVNM6TaHYNlRFw0aloLQkuKTIJ0@hWFMv7X@2bVp@TkqORkyiQrGuXUq@RqhCuqaNbqJ1OlBeo6C0KFUvVAVMpWly5SZm5tlmRysVGyrpKBUbgQhjpdj/AA" rel="nofollow noreferrer" title="Haskell – Try It Online">Try it online!</a></p>
+<p>Invalid solution using typeclasses:</p>
+<pre class="lang-hs prettyprint-override"><code>{-#LANGUAGE FlexibleInstances#-}
+class F a where g::String-&gt;a
+instance F()where g _=()
+instance F a=&gt;F(String-&gt;IO a)where g a b=g b&lt;$putStrLn a
+</code></pre>
+<p><a href="https://tio.run/##TYxBC4JAEIXv/orH2sEOHqqbuIKHVgSpQ3SO0dZV2rZwjYLot9siGs1h4Hvvm2nIXqTWw/AO/SLdZcc020Jo@WpLLXNjezKVtH748SpN1kKA8GxkJ6Gi6NB3rVFhQl47mRDBcqpx4sHyrwDxRATzSb4H/UxCyRXKeHF/9E4oDGi4UmsQRXCiezMSx/nmwY2WPWqHCsyu2BjViEO3mF3PzOyGDV8" rel="nofollow noreferrer" title="Haskell – Try It Online">Try it online!</a></p>
+<p>The the typeclass based version will eventually return <code>IO ()</code>, so it isn't really infinite. The non-typeclass based version however does go on forever.</p>
+</div>
+<div id="pu1" class="pu"><h1><a href="https://www.rust-lang.org" rel="nofollow noreferrer">Rust</a>, <s>57</s> <s>49</s> 45 bytes</h1>
+<pre class="lang-rust prettyprint-override"><code>fn x(s:&amp;str)-&gt;Box&lt;dyn Fn(&amp;str)&gt;{dbg!(s);x(s)}
+</code></pre>
+<p><a href="https://ato.pxeger.com/run?1=m72kqLS4ZMGCpaUlaboWN3XT8hQqNIqt1IpLijR17ZzyK2xSKvMU3PI0wCJ21SlJ6YoaxZrWQEWatRBNe4B6chMz8zQ0Faq5FICgQkOpJLW4REnTmguqBGY-AA" rel="nofollow noreferrer">Attempt This Online!</a></p>
 <p>Call the function like this:</p>
 <pre class="lang-rs prettyprint-override"><code>fn main() {
     x(&quot;test&quot;);
 }
 </code></pre>
 </div>
-<div id="pu1" class="pu"><h1>C++, 69 bytes</h1>
+<div id="pu2" class="pu"><h1>C++, 69 bytes</h1>
 <pre><code>auto f(auto s){return[=](this auto t,auto n){return cout&lt;&lt;s,s=n,t;};}
 </code></pre>
 <p><a href="https://godbolt.org/z/axev3hfYf" rel="nofollow noreferrer">Try it online!</a></p>
-</div>
-<div id="pu2" class="pu"><h1><a href="https://www.haskell.org/" rel="nofollow noreferrer">Haskell</a>, <s>57</s>, 45 bytes</h1>
-
-<pre class="lang-hs prettyprint-override"><code>data U=U([Char]-&gt;IO U);f s=U$(&lt;$putStrLn s).f
-</code></pre>
-<p>I thought you needed an import to have access to an operator like <code>($&gt;)</code>, but I just found out that the flipped version <code>(&lt;$)</code> is already in the prelude.</p>
-<p><a href="https://tio.run/##y0gszk7Nyfn/PyWxJFEh1DZUI9o5I7EoVtfO018hVNM6TaHYNlRFw0aloLQkuKTIJ0@hWFMv7X9uYmaegq1CSj6XAhDkpJYoaIQqpGsChdIUlIoNlcDCECEbXYV0oJgRRAzENFb6DwA" rel="nofollow noreferrer" title="Haskell – Try It Online">Try it online!</a></p>
 </div>
 <div id="pu3" class="pu"><h1><a href="https://www.wolfram.com/wolframscript/" rel="nofollow noreferrer">Wolfram Language (Mathematica)</a>, <s>19</s> 18 bytes</h1>
 <pre><code>f@a_=f[Print@a;#]&amp;
